# Duo-Live

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  MIGRATION_SUMMARY.md  README.md  SKILL.md  dd.md  deploy.sh  ecosystem.config.js  main.py  pyproject.toml  r24_params.json  requirements.txt  run_forever.sh  task.md  timestamp_converter.html  排查.md
.agent/workflows/: frontend-design.md
data/: config.dual-strategy.EXAMPLE.json  config.json  dsxtx_state.json
docs/: DUPLICATE_ORDERS_FIX.md  FIX_WRONG_TP_ORDERS.md  NETWORK_OPTIMIZATION_APPLIED.md  NETWORK_TROUBLESHOOTING.md  QUICK_START_EMAIL.md  TODO.md  improvements-from-ae-server.md  live_executor_and_monitor.md  nginx-deploy.md
live/: AE Server Script.py  __init__.py  __main__.py  api.py  binance_client.py  binance_models.py  live_config.py  live_executor.py  live_position_monitor.py  live_queries.py  live_scanner.py  models.py  notifier.py  paper_executor.py  paper_store.py  paper_trader.py  paper_trading.py  position_monitor.py  raw_surge_signal.py  risk_filters.py  rolling_config.py  rolling_live_strategy.py  rolling_scanner.py  runtime_info.py  sell_surge_binance.py  store.py  strategy.py  strategy_factory.py  strategy_quota.py  telegram_bot.py  trader.py  ws_stream.py
scripts/: fix_wrong_tp_orders.py  git-quick-push.sh  optimize_network.py
tests/: test_dynamic_tp.py  test_tp_sl_detection.py  test_ws_handler.py
web/: eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
web/app/: layout.tsx  (+1 more)
(+60 files in other folders)
