[project]
name = "duo-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
